// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrFinalCommentHr Component displays an info text before the employee has finalized 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <PrTextField
          fieldId="finalCommentHr"
          helperText="Letzte Anmerkungen und Ergänzungen zum Performance Review."
          label="Abschließender Kommentar durch HR-Mitarbeiter (optional)"
          onChange={[Function]}
          openEditing={false}
          readOnlyFlag={false}
          writeableText=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`PrFinalCommentHr Component displays the PrFinalCommentHr 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <PrTextField
          fieldId="finalCommentHr"
          helperText="Letzte Anmerkungen und Ergänzungen zum Performance Review."
          label="Abschließender Kommentar durch HR-Mitarbeiter (optional)"
          onChange={[Function]}
          openEditing={true}
          readOnlyFlag={false}
          writeableText=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`PrFinalCommentHr Component displays the text read-only after HR has finalized 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <PrTextField
          fieldId="finalCommentHr"
          helperText="Letzte Anmerkungen und Ergänzungen zum Performance Review."
          label="Abschließender Kommentar durch HR-Mitarbeiter (optional)"
          onChange={[Function]}
          openEditing={true}
          readOnlyFlag={true}
          writeableText=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;
